--- a/clashmeta.yaml
+++ b/clashmeta.yaml
@@ -24,9 +24,14 @@ dns:
   nameserver:
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
+    - 119.29.29.29
+    - 223.5.5.5
   fallback:
     - https://1.0.0.1/dns-query
     - tls://dns.google
+    - 8.8.8.8
+    - 8.8.4.4
+    - tls://1.0.0.1:853
   fallback-filter:
     geoip: true
     geoip-code: CN
